--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -27,3 +27,8 @@ tex.issue_date: Dec. 1964}, number={12}, journal={Communications of The Acm}, pu
 tex.issue_date: May 1960}, number={5}, journal={Communications of The Acm}, publisher={Association for Computing Machinery}, author={Backus, J. W. and Bauer, F. L. and Green, J. and Katz, C. and McCarthy, J. and Perlis, A. J. and Rutishauser, H. and Samelson, K. and Vauquois, B. and Wegstein, J. H. and van Wijngaarden, A. and Woodger, M. and Naur, Peter}, year={1960}, month={May}, pages={299–314} }
 
 @book{Matz_Hubicka_Jaeger_Mitchell_2013, type={manual}, title={System V application binary interface, AMD64 architecture processor supplement}, note={Citation Key: Matz:2013aa}, author={Matz, Michael and Hubicka, Jan and Jaeger, Andreas and Mitchell, Mark}, year={2013}, month={Oct} }
+
+@book{Cardelli_1983, title={The functional abstract machine}, note={Citation Key: Cardelli:1983aa}, number={TR-107}, institution={AT\&T Bell Laboratories}, author={Cardelli, Luca}, year={1983} }
+
+@inproceedings{Minamide_Morrisett_Harper_1996, address={New York, NY, USA}, series={POPL ’96}, title={Typed closure conversion}, ISBN={0-89791-769-3}, url={https://doi.org/10.1145/237721.237791}, DOI={10.1145/237721.237791}, note={Citation Key: 10.1145/237721.237791
+publisher-place: St. Petersburg Beach, Florida, USA}, booktitle={Proceedings of the 23rd ACM SIGPLAN-SIGACT symposium on principles of programming languages}, publisher={Association for Computing Machinery}, author={Minamide, Yasuhiko and Morrisett, Greg and Harper, Robert}, year={1996}, pages={271–283}, collection={POPL ’96} }
