--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -32,3 +32,8 @@ tex.issue_date: May 1960}, number={5}, journal={Communications of The Acm}, publ
 
 @inproceedings{Minamide_Morrisett_Harper_1996, address={New York, NY, USA}, series={POPL ’96}, title={Typed closure conversion}, ISBN={0-89791-769-3}, url={https://doi.org/10.1145/237721.237791}, DOI={10.1145/237721.237791}, note={Citation Key: 10.1145/237721.237791
 publisher-place: St. Petersburg Beach, Florida, USA}, booktitle={Proceedings of the 23rd ACM SIGPLAN-SIGACT symposium on principles of programming languages}, publisher={Association for Computing Machinery}, author={Minamide, Yasuhiko and Morrisett, Greg and Harper, Robert}, year={1996}, pages={271–283}, collection={POPL ’96} }
+
+@inproceedings{Wilson_1992, address={Berlin, Heidelberg}, title={Uniprocessor garbage collection techniques}, ISBN={978-3-540-47315-2}, note={Citation Key: 10.1007/BFb0017182}, booktitle={Memory management}, publisher={Springer Berlin Heidelberg}, author={Wilson, Paul R.}, editor={Bekkers, Yves and Cohen, Jacques}, year={1992}, pages={1–42} }
+
+@article{Cheney_1970, address={New York, NY, USA}, title={A nonrecursive list compacting algorithm}, volume={13}, ISSN={0001-0782}, DOI={10.1145/362790.362798}, note={Citation Key: 10.1145/362790.362798
+tex.issue_date: Nov 1970}, number={11}, journal={Communications of The Acm}, publisher={Association for Computing Machinery}, author={Cheney, C. J.}, year={1970}, month={Nov}, pages={677–678} }
