draft: register, patch

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -37,3 +37,12 @@ publisher-place: St. Petersburg Beach, Florida, USA}, booktitle={Proceedings of 
 
 @article{Cheney_1970, address={New York, NY, USA}, title={A nonrecursive list compacting algorithm}, volume={13}, ISSN={0001-0782}, DOI={10.1145/362790.362798}, note={Citation Key: 10.1145/362790.362798
 tex.issue_date: Nov 1970}, number={11}, journal={Communications of The Acm}, publisher={Association for Computing Machinery}, author={Cheney, C. J.}, year={1970}, month={Nov}, pages={677–678} }
+
+@inproceedings{Allen_1970, address={New York, NY, USA}, title={Control flow analysis}, ISBN={978-1-4503-7386-9}, url={https://doi.org/10.1145/800028.808479}, DOI={10.1145/800028.808479}, note={Citation Key: 10.1145/800028.808479
+publisher-place: Urbana-Champaign, Illinois}, booktitle={Proceedings of a symposium on compiler optimization}, publisher={Association for Computing Machinery}, author={Allen, Frances E.}, year={1970}, pages={1–19} }
+
+@inproceedings{Kildall_1973, address={New York, NY, USA}, series={POPL ’73}, title={A unified approach to global program optimization}, ISBN={978-1-4503-7349-4}, url={https://doi.org/10.1145/512927.512945}, DOI={10.1145/512927.512945}, note={Citation Key: 10.1145/512927.512945
+publisher-place: Boston, Massachusetts}, booktitle={Proceedings of the 1st annual ACM SIGACT-SIGPLAN symposium on principles of programming languages}, publisher={Association for Computing Machinery}, author={Kildall, Gary A.}, year={1973}, pages={194–206}, collection={POPL ’73} }
+
+@article{Brélaz_1979, address={New York, NY, USA}, title={New methods to color the vertices of a graph}, volume={22}, ISSN={0001-0782}, DOI={10.1145/359094.359101}, note={Citation Key: 10.1145/359094.359101
+tex.issue_date: April 1979}, number={4}, journal={Communications of The Acm}, publisher={Association for Computing Machinery}, author={Brélaz, Daniel}, year={1979}, month={Apr}, pages={251–256} }
