--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,8 @@
 %\input{chapters/source-language.tex}
 %\input{chapters/target-language.tex}
 \input{chapters/compiling.tex}
+\input{chapters/gui.tex}
+
 %\input{chapters/floats.tex}
 %\input{chapters/math.tex}
 %\input{chapters/citations.tex}
