--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,7 @@
 %\input{chapters/target-language.tex}
 \input{chapters/compiling.tex}
 \input{chapters/gui.tex}
+\input{chapters/conclusion.tex}
 
 %\input{chapters/floats.tex}
 %\input{chapters/math.tex}
