--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,8 @@
 \input{chapters/abstract.tex}
 \tableofcontents
 \listoffigures
+\cleardoublepage
+
 %\listoftables
 %\input{chapters/notation.tex} % [符号说明]
 
